<resources>
    <string name="app_name">Pokedex</string>
    <string name="nomePoke">Charmander</string>
    <string name="numeroPoke">Nº 004</string>
    <string name="tipoPoke">Fogo</string>
    <string name="tipoPokeDois">Fogo</string>
    <string name="tipo2">Grama</string>
    <string name="fire">Fire</string>
    <string name="evolutions">Evolutions</string>
    <string name="_22_0_kg">22.0 kg</string>
    <string name="_0_9_m">0.9 m</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="search" />
</resources>